# thor

./: .gitignore  CMakeLists.txt  README.md  ThorConfig.cmake.in  thor
data/: .gitignore  cfg.txt  test.sh
include/: CMakeLists.txt
include/thor/: color.h  image.h  settings.h  thor.h
libthor/: CMakeLists.txt  bits.c  bits.h  block.c  block.h  color.c  color.h  decode.c  decode_block.c  decode_block.h  decode_frame.c  decode_frame.h  encode.c  encode_block.c  encode_frame.c  encode_frame.h  frame.c  frame.h  getbits.h  getvlc.c  getvlc.h  global.h  image.c  image.h  inter.c  inter.h  inter_prediction.c  intra.c  intra.h  intra_prediction.c  kernels.c  kernels.h  maindec.c  mainenc.c  params.c  putbits.h  putvlc.c  putvlc.h  settings.c  simd.h  (+12 more)
libthor/simd/: v128_intrinsics_x86.h  v64_intrinsics_x86.h
test/: .gitignore  CMakeLists.txt  TestTransforms.c
tool/: CMakeLists.txt  thor.c
